# format-conversion

./: .gitignore  .gitmodules  CMakeLists.txt  DESIGN.md  MANIFEST.in  README.md  pyproject.toml  setup.py
benchmarks/conversion/: .gitignore  README.md  aggregate.py  config.toml  correctness.py  gen_jobs.py  metrics.py  run_job.py  slurm_job.sh
benchmarks/conversion/adapters/: __init__.py  format_conv.py  icebug.py  networkit.py
benchmarks/parquet_sweep/: CMakeLists.txt  README.md  analysis.R  bench.err  bench_parquet.cpp  gen_sweep.py  graphs.csv  results.csv  sweep.csv
examples/: convert.py  demo.py  demo_convert.py  demo_partition.py
format_conversion/: __init__.py  __init__.pyi  convert.h  convert.pyi  convert_wrap.cpp  format.pyi  format_wrap.cpp  formats.h  graph_io.h  graph_read.h  graph_write.h  partition.h  partition.pyi  partition_wrap.cpp  system.h
input/: dnc.indices.parquet  dnc.indptr.parquet  dnc.metis  dnc.parts.2  dnc_edges.csv  dnc_nodes.csv
scripts/: build_nodelist.py  metis_to_csr.py
src/: __init__.py  convert.cpp  convert.h  convert_old.h  convert_wrap.cpp  partition.h  partition_wrap.cpp
stubs/format_conversion/: __init__.pyi
tests/: conftest.py  formats.py  graphs.py  helpers.py  test_convert.py  test_partition.py
